--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
         SELECT * FROM Customers;
         selects all data from Data where customers are saved/
     -->
+
+    <h1>Introduction to SQL</h1>
+    <p>SQL is a standard language for accessing and manipulating databases.</p>
+
+    <p>What is SQL?</p>
+    <ul>
+        <li>SQL stands for Structured Query Language</li>
+        <li>SQL lets you access and manipulate databases</li>
+        <li>SQL became a standard of the American National Standards Institute (ANSI) in 1986, and of the International Organization for Standardization (ISO) in 1987</li>
+    </ul>
+
+    <p>What Can SQL do?</p>
+
+
     
 </body>
 </html>
