--- a/index.html
+++ b/index.html
@@ -27,6 +27,27 @@
     </ul>
 
     <p>What Can SQL do?</p>
+    <ul>
+        <li>SQL can execute queries against a database</li>
+        <li>SQL can retrieve data from a database</li>
+        <li>SQL can insert records in a database</li>
+        <li>SQL can update records in a database</li>
+        <li>SQL can delete records from a database</li>
+        <li>SQL can create new databases</li>
+        <li>SQL can create new tables in a database</li>
+        <li>SQL can create stored procedures in a database</li>
+        <li>SQL can create views in a database</li>
+        <li>SQL can set permissions on tables, procedures, and views</li>
+    </ul>
+
+    <h3>SQL is a Standard - BUT....</h3>
+    <p>Although SQL is an ANSI/ISO standard, there are different versions of the SQL language.</p>
+    <p>However, to be compliant with the ANSI standard, they all support at least the major commands (such as SELECT, UPDATE, DELETE, INSERT, WHERE) in a similar manner.</p>
+
+    <p>Note: Most of the SQL database programs also have their own proprietary extensions in addition to the SQL standard!</p>
+
+    <h3>Using SQL in Your Web Site</h3>
+    
 
 
     
