--- a/index.html
+++ b/index.html
@@ -47,7 +47,14 @@
     <p>Note: Most of the SQL database programs also have their own proprietary extensions in addition to the SQL standard!</p>
 
     <h3>Using SQL in Your Web Site</h3>
-    
+
+    <p>To build a web site that shows data from a database, you will need:</p>
+    <ul>
+        <li>An RDBMS database program (i.e. MS Access, SQL Server, MySQL)</li>
+        <li>To use a server-side scripting language, like PHP or ASP</li>
+        <li>To use SQL to get the data you want</li>
+        <li>To use HTML / CSS to style the page</li>
+    </ul>
 
 
     
