--- a/index.html
+++ b/index.html
@@ -56,6 +56,17 @@
         <li>To use HTML / CSS to style the page</li>
     </ul>
 
+    <h3>RDBMS</h3>
+    <p>RDBMS stands for Relational Database Management System.</p>
+    <p>RDBMS is the basis for SQL, and for all modern database systems such as MS SQL Server, IBM DB2, Oracle, MySQL, and Microsoft Access.</p>
+    <p>The data in RDBMS is stored in database objects called tables. A table is a collection of related data entries and it consists of columns and rows.</p>
+
+    <p>Every table is broken up into smaller entities called fields. The fields in the Customers table consist of CustomerID, CustomerName, ContactName, Address, City, PostalCode and Country. </p>
+    <p>A record, also called a row, is each individual entry that exists in a table. For example, there are 91 records in the above Customers table. A record is a horizontal entity in a table.</p>
+    <p>A column is a vertical entity in a table that contains all information associated with a specific field in a table.</p>
+
+    
+
 
     
 </body>
