important SQL commands

--- a/index.html
+++ b/index.html
@@ -83,7 +83,21 @@
     <p>Some database systems require a semicolon at the end of each SQL statement.</p>
     <p>Semicolon is the standard way to separate each SQL statement in database systems that allow more than one SQL statement to be executed in the same call to the server.</p>
 
-    
+    <h3>Some of The Most Important SQL Commands</h3>
+    <ul>
+        <li>SELECT - extracts data from a database</li>
+        <li>UPDATE - updates data in a database</li>
+        <li>DELETE - deletes data from a database</li>
+        <li>INSERT INTO - inserts new data into a database</li>
+        <li>CREATE DATABASE - creates a new database</li>
+        <li>ALTER DATABASE - modifies a database</li>
+        <li>CREATE TABLE - creates a new table</li>
+        <li>ALTER TABLE - modifies a table</li>
+        <li>DROP TABLE - deletes a table</li>
+        <li>CREATE INDEX - creates an index (search key)</li>
+        <li>DROP INDEX - deletes an index</li>
+    </ul>
+
 
     
 </body>
