SQL select statement

--- a/index.html
+++ b/index.html
@@ -99,6 +99,26 @@
     </ul>
 
     <h1>SQL SELECT Statement</h1>
+    <p>The SELECT statement is used to select data from a database.</p>
+    <p>The data returned is stored in a result table, called the result-set.</p>
+    <p>SELECT Syntax</p>
+    <ul>
+        <li>SELECT column1, column2, ...</li>
+        <li>FROM table_name;</li>
+    </ul>
+
+    <p>Here, column1, column2, ... are the field names of the table you want to select data from. If you want to select all the fields available in the table, use the following syntax:</p>
+    <ul>
+        <li>SELECT * FROM table_name;</li>
+    </ul>
+
+    <p>The following SQL statement selects the "CustomerName" and "City" columns from the "Customers" table:</p>
+    <p>SELECT CustomerName, City FROM Customers;</p>
+    or
+    <p>SELECT CustomerName,City,ContactName FROM Customers;</p>
+
+    <p>The following SQL statement selects all the columns from the "Customers" table:</p>
+    <p>SELECT * FROM Customers;</p>
 
 
     
