--- a/index.html
+++ b/index.html
@@ -120,6 +120,8 @@
     <p>The following SQL statement selects all the columns from the "Customers" table:</p>
     <p>SELECT * FROM Customers;</p>
 
+    <h1>SQL SELECT DISTINCT Statement</h1>
+
 
     
 </body>
