--- a/index.html
+++ b/index.html
@@ -121,6 +121,19 @@
     <p>SELECT * FROM Customers;</p>
 
     <h1>SQL SELECT DISTINCT Statement</h1>
+    <p>The SELECT DISTINCT statement is used to return only distinct (different) values.</p>
+    <p>Inside a table, a column often contains many duplicate values; and sometimes you only want to list the different (distinct) values.</p>
+
+    <p>syntax:</p>
+    <ul>
+        <li>SELECT DISTINCT column1, column2, ...</li>
+        <li>FROM table_name;</li>
+    </ul>
+
+    <p>SELECT DISTINCT Country FROM Customers;  -- result is 21</p>
+    <p>SELECT Country FROM Customers;  -- result is 91</p>
+
+    
 
 
     
