WHERE clause in SQL

--- a/index.html
+++ b/index.html
@@ -144,7 +144,30 @@
         <li>FROM (SELECT DISTINCT Country FROM Customers);</li>
     </ul>
 
+    <h1>SQL WHERE Clause</h1>
+
+    <p>The WHERE clause is used to filter records.</p>
+    <p>It is used to extract only those records that fulfill a specified condition.</p>
+
+    <p>WHERE Syntax</p>
+    <ul>
+        <li>SELECT column1, column2, ...</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    <p><strong>Note: The WHERE clause is not only used in SELECT statements, it is also used in UPDATE, DELETE, etc.!</strong></p>
+
+    <p>The following SQL statement selects all the customers from the country "Mexico", in the "Customers" table:</p>
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>WHERE Country='Mexico';</li>
+    </ul>
+
+    <p>above mentioned statement selects all records where in country column there is mentioned Mexico  - 5 Records </p>
+
     
+
     
 
 </body>
