--- a/index.html
+++ b/index.html
@@ -166,9 +166,30 @@
 
     <p>above mentioned statement selects all records where in country column there is mentioned Mexico  - 5 Records </p>
 
-    
+    <h3>Text Fields vs. Numeric Fields</h3>
 
-    
+    <p>SQL requires single quotes around text values (most database systems will also allow double quotes).</p>
+    <p>However, numeric fields should not be enclosed in quotes:</p>
+
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>WHERE CustomerID=1;</li>
+    </ul>
+
+    <h3>Operators in The WHERE Clause</h3>
+    <p>The following operators can be used in the WHERE clause:</p>
+
+    <ul>
+        <li>=	Equal</li>
+        <li>>	Greater than</li>
+        <li> <span>"<"</span>	Less than</li>
+        <li>>=	Greater than or equal</li>
+        <li><=	Less than or equal</li>
+        <li><>	Not equal. Note: In some versions of SQL this operator may be written as !=</li>
+        <li>BETWEEN	Between a certain range</li>
+        <li>LIKE	Search for a pattern</li>
+        <li>IN	To specify multiple possible values for a column</li>
+    </ul>
 
 </body>
 </html>
