SQL AND/OR/NOT Operators

--- a/index.html
+++ b/index.html
@@ -191,5 +191,40 @@
         <li>IN	To specify multiple possible values for a column</li>
     </ul>
 
+    <h1>SQL AND, OR and NOT Operators</h1>
+    <p>The WHERE clause can be combined with AND, OR, and NOT operators.</p>
+
+    <p>The AND and OR operators are used to filter records based on more than one condition:</p>
+    <ul>
+        <li>The AND operator displays a record if all the conditions separated by AND are TRUE.</li>
+        <li>The OR operator displays a record if any of the conditions separated by OR is TRUE.</li>
+    </ul>
+
+    <p>The NOT operator displays a record if the condition(s) is NOT TRUE.</p>
+
+    <h2>AND Syntax</h2>
+    <ul>
+        <li>SELECT column1, column2, ...</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition1 AND condition2 AND condition3 ...;</li>
+    </ul>
+
+
+    <h2>OR Syntax</h2>
+    <ul>
+        <li>SELECT column1, column2, ...</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition1 OR condition2 OR condition3 ...;</li>
+    </ul>
+
+    <h2>NOT Syntax</h2>
+    <ul>
+        <li>SELECT column1, column2, ...</li>
+        <li>FROM table_name</li>
+        <li>WHERE NOT condition;</li>
+    </ul>
+
+    
+
 </body>
 </html>
