SQL AND/OR/NOT operators example

--- a/index.html
+++ b/index.html
@@ -224,7 +224,34 @@
         <li>WHERE NOT condition;</li>
     </ul>
 
+
+    <p>The following SQL statement selects all fields from "Customers" where country is "Germany" AND city is "Berlin":</p>
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>WHERE Country='Germany' AND City='Berlin';</li>
+    </ul>
+
+    <p>The following SQL statement selects all fields from "Customers" where city is "Berlin" OR "München":</p>
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>WHERE City='Berlin' OR City='München';</li>
+    </ul>
+
+    <p>The following SQL statement selects all fields from "Customers" where country is "Germany" OR "Spain":</p>
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>WHERE Country='Germany' OR Country='Spain';</li>
+    </ul>
+
+    <p>The following SQL statement selects all fields from "Customers" where country is NOT "Germany":</p>
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>WHERE NOT Country='Germany';</li>
+    </ul>
+
     
+
+
 
 </body>
 </html>
