--- a/index.html
+++ b/index.html
@@ -268,6 +268,30 @@
 
     <h1>SQL ORDER BY Keyword</h1>
 
+    <p>The ORDER BY keyword is used to sort the result-set in ascending or descending order.</p>
+    <p>The ORDER BY keyword sorts the records in ascending order by default. To sort the records in descending order, use the DESC keyword.</p>
+
+    <ul>
+        <li>SELECT column1, column2, ...</li>
+        <li>FROM table_name</li>
+        <li>ORDER BY column1, column2, ... ASC|DESC;</li>
+    </ul>
+
+    <p>The following SQL statement selects all customers from the "Customers" table, sorted by the "Country" column:</p>
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>ORDER BY Country;</li>
+    </ul>
+
+    or
+
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>ORDER BY City;</li>
+    </ul>
+
+
+
 
 
 </body>
