--- a/index.html
+++ b/index.html
@@ -353,6 +353,44 @@
         <li>VALUES ('Cardinal', 'Stavanger', 'Norway');</li>
     </ul>
 
+    <h1>SQL NULL Values</h1>
+    <p>A field with a NULL value is a field with no value.</p>
+    <p>If a field in a table is optional, it is possible to insert a new record or update a record without adding a value to this field.</p>
+    <p>Then, the field will be saved with a NULL value.</p>
+
+    <p><strong>Note: A NULL value is different from a zero value or a field that contains spaces. A field with a NULL value is one that has been left blank during record creation!</strong></p>
+
+    <h3>How to Test for NULL Values?</h3>
+    <p>It is not possible to test for NULL values with comparison operators, such as =, <, or <>.</p>
+    <p>We will have to use the IS NULL and IS NOT NULL operators instead.</p>
+
+    <h3>IS NULL Syntax</h3>
+    <ul>
+        <li>SELECT column_names</li>
+        <li>FROM table_name</li>
+        <li>WHERE column_name IS NULL;</li>
+    </ul>
+
+    <h3>IS NOT NULL Syntax</h3>
+    <ul>
+        <li>SELECT column_names</li>
+        <li>FROM table_name</li>
+        <li>WHERE column_name IS NOT NULL;</li>
+    </ul>
+
+
+    <h3>The IS NULL Operator</h3>
+    <p>The IS NULL operator is used to test for empty values (NULL values).</p>
+    <p>The following SQL lists all customers with a NULL value in the "Address" field:</p>
+
+    <ul>
+        <li>SELECT CustomerName, ContactName, Address</li>
+        <li>FROM Customers</li>
+        <li>WHERE Address IS NULL;</li>
+    </ul>
+
+    <p><strong>Tip: Always use IS NULL to look for NULL values.</strong></p>
+
 
 
 </body>
