SQL delete statement

--- a/index.html
+++ b/index.html
@@ -437,6 +437,8 @@
 
     <p>Be careful when updating records. If you omit the WHERE clause, ALL records will be updated!</p>
 
+    <h1>SQL DELETE Statement</h1>
+
 
 </body>
 </html>
