DELETE statement and importance of WHERE

--- a/index.html
+++ b/index.html
@@ -439,6 +439,18 @@
 
     <h1>SQL DELETE Statement</h1>
 
+    <p>The DELETE statement is used to delete existing records in a table.</p>
+
+    <p>syntax is following:</p>
+    <p>DELETE FROM table_name WHERE condition;</p>
+
+    <p>Note: Be careful when deleting records in a table! Notice the WHERE clause in the DELETE statement. </p>
+    <p>Note: Be careful when deleting records in a table! Notice the WHERE clause in the DELETE statement. </p>
+    <p>The WHERE clause specifies which record(s) should be deleted. If you omit the WHERE clause, all records in the table will be deleted!</p>
+
+    <p>The following SQL statement deletes the customer "Alfreds Futterkiste" from the "Customers" table:</p>
+    <p>DELETE FROM Customers WHERE CustomerName='Alfreds Futterkiste';</p>
+
 
 </body>
 </html>
