DELETE all records

--- a/index.html
+++ b/index.html
@@ -451,6 +451,15 @@
     <p>The following SQL statement deletes the customer "Alfreds Futterkiste" from the "Customers" table:</p>
     <p>DELETE FROM Customers WHERE CustomerName='Alfreds Futterkiste';</p>
 
+    <h3>Delete All Records</h3>
+    <p>It is possible to delete all rows in a table without deleting the table. This means that the table structure, attributes, and indexes will be intact:</p>
+    
+    <p>syntax is following:</p>
+    <p>DELETE FROM table_name;</p>
+
+    <p>The following SQL statement deletes all rows in the "Customers" table, without deleting the table:</p>
+    <p>DELETE FROM Customers;</p>
+
 
 </body>
 </html>
