--- a/index.html
+++ b/index.html
@@ -460,6 +460,36 @@
     <p>The following SQL statement deletes all rows in the "Customers" table, without deleting the table:</p>
     <p>DELETE FROM Customers;</p>
 
+    <h1>SQL TOP, LIMIT, FETCH FIRST or ROWNUM Clause</h1>
+
+    <p>The SELECT TOP clause is used to specify the number of records to return.</p>
+    <p>The SELECT TOP clause is useful on large tables with thousands of records. Returning a large number of records can impact performance.</p>
+
+    <p><strong>Note: Not all database systems support the SELECT TOP clause. MySQL supports the LIMIT clause to select a limited number of records, while Oracle uses FETCH FIRST n ROWS ONLY and ROWNUM.</strong></p>
+
+    <p>SQL Server / MS Access Syntax:</p>
+    <ul>
+        <li>SELECT TOP number|percent column_name(s)</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    <p>MySQL Syntax:</p>
+    <ul>
+        <li>SELECT column_name(s)</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition</li>
+        <li>LIMIT number;</li>
+    </ul>
+
+    <p>Oracle 12 Syntax:</p>
+    <ul>
+        <li>SELECT column_name(s)</li>
+        <li>FROM table_name</li>
+        <li>ORDER BY column_name(s)</li>
+        <li>FETCH FIRST number ROWS ONLY;</li>
+    </ul>
+
 
 </body>
 </html>
