different database examples shown

--- a/index.html
+++ b/index.html
@@ -490,6 +490,25 @@
         <li>FETCH FIRST number ROWS ONLY;</li>
     </ul>
 
+    <p>the following SQL statement selects the first three records from the "Customers" table (for SQL Server/MS Access):</p>
+
+    <p>SELECT TOP 3 * FROM Customers;</p>
+
+    <p>The following SQL statement shows the equivalent example for MySQL:</p>
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>LIMIT 3;</li>
+    </ul>
+
+    <p>The following SQL statement shows the equivalent example for Oracle:</p>
+
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>FETCH FIRST 3 ROWS ONLY;</li>
+    </ul>
+
+    
+
 
 </body>
 </html>
