SQL min/max syntax

--- a/index.html
+++ b/index.html
@@ -541,6 +541,25 @@
 
     <h1>SQL MIN() and MAX() Functions</h1>
 
+    <p>The MIN() function returns the smallest value of the selected column.</p>
+    <p>The MAX() function returns the largest value of the selected column.</p>
+
+    <p>min syntax is following:</p>
+    <ul>
+        <li>SELECT MIN(column_name)</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    <p>max syntax is following:</p>
+    <ul>
+        <li>SELECT MAX(column_name)</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    
+
 
 </body>
 </html>
