min/max on example

--- a/index.html
+++ b/index.html
@@ -558,8 +558,19 @@
         <li>WHERE condition;</li>
     </ul>
 
-    
+    <p>min syntax example:</p>
+    <ul>
+        <li>SELECT MIN(Price) AS SmallestPrice</li>
+        <li>FROM Products; </li>
+    </ul>
 
+    <p>MAX() Example:</p>
+    <ul>
+        <li>SELECT MAX(Price) AS LargestPrice</li>
+        <li>FROM Products;</li>
+    </ul>
+
+    
 
 </body>
 </html>
