COUNT/AVG/SUM functions

--- a/index.html
+++ b/index.html
@@ -570,6 +570,29 @@
         <li>FROM Products;</li>
     </ul>
 
+    <h1>SQL COUNT(), AVG() and SUM() Functions</h1>
+    <p>The COUNT() function returns the number of rows that matches a specified criterion.</p>
+    <p>count syntax is following:</p>
+    <ul>
+        <li>SELECT COUNT(column_name)</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    <p>The AVG() function returns the average value of a numeric column and the syntax is following</p>
+    <ul>
+        <li>SELECT AVG(column_name)</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition;</li>
+    </ul>
+
+    <p>The SUM() function returns the total sum of a numeric column and the syntax is following: </p>
+    <ul>
+        <li>SELECT SUM(column_name)</li>
+        <li>FROM table_name</li>
+        <li>WHERE condition;</li>
+    </ul>
+
     
 
 </body>
