--- a/index.html
+++ b/index.html
@@ -692,6 +692,22 @@
         <li>WHERE CustomerName NOT LIKE 'a%';</li>
     </ul>
 
+    <h1>SQL Wildcards</h1>
+    <p>A wildcard character is used to substitute one or more characters in a string.</p>
+    <p><strong>Wildcard characters are used with the LIKE operator. The LIKE operator is used in a WHERE clause to search for a specified pattern in a column.</strong></p>
+
+    <p>Wildcard Characters in MS Access</p>
+    <ul>
+        <li>*	Represents zero or more characters	bl* finds bl, black, blue, and blob</li>
+        <li>?	Represents a single character	h?t finds hot, hat, and hit</li>
+        <li>[]	Represents any single character within the brackets	h[oa]t finds hot and hat, but not hit</li>
+        <li>!	Represents any character not in the brackets	h[!oa]t finds hit, but not hot and hat</li>
+        <li>-	Represents a range of characters	c[a-b]t finds cat and cbt</li>
+        <li>#	Represents any single numeric character	2#5 finds 205, 215, 225, 235, 245, 255, 265, 275, 285, and 295</li>
+    </ul>
+
+    
+
 
 </body>
 </html>
