SQL IN operator

--- a/index.html
+++ b/index.html
@@ -782,6 +782,26 @@
         <li>WHERE City NOT LIKE '[bsp]%';</li>
     </ul>
 
+
+    <h1>SQL IN Operator</h1>
+    <p>The IN operator allows you to specify multiple values in a WHERE clause.</p>
+    <p>The IN operator is a shorthand for multiple OR conditions.</p>
+
+    <p>IN Syntax is following:</p>
+    <ul>
+        <li>SELECT column_name(s)</li>
+        <li>FROM table_name</li>
+        <li>WHERE column_name IN (value1, value2, ...);</li>
+    </ul>
+
+    <p>or</p>
+
+    <ul>
+        <li>SELECT column_name(s)</li>
+        <li>FROM table_name</li>
+        <li>WHERE column_name IN (SELECT STATEMENT);</li>
+    </ul>
+
     
 
 
