--- a/index.html
+++ b/index.html
@@ -802,7 +802,29 @@
         <li>WHERE column_name IN (SELECT STATEMENT);</li>
     </ul>
 
+    <h3>IN Operator Examples</h3>
+    <p>The following SQL statement selects all customers that are located in "Germany", "France" or "UK":</p>
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>WHERE Country IN ('Germany', 'France', 'UK');</li>
+    </ul>
+
+    <p>The following SQL statement selects all customers that are NOT located in "Germany", "France" or "UK":</p>
+
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>WHERE Country NOT IN ('Germany, 'France', 'UK');</li>
+    </ul>
+
+    <p>The following SQL statement selects all customers that are from the same countries as the suppliers:</p>
+    <ul>
+        <li>SELECT * FROM Customers</li>
+        <li>WHERE Country IN (SELECT Country FROM Suppliers);</li>
+    </ul>
+
     
+
+
 
 
 
