--- a/index.html
+++ b/index.html
@@ -822,6 +822,21 @@
         <li>WHERE Country IN (SELECT Country FROM Suppliers);</li>
     </ul>
 
+    <h1>SQL BETWEEN Operator</h1>
+    <p>The BETWEEN operator selects values within a given range. The values can be numbers, text, or dates.</p>
+    <p>The BETWEEN operator is inclusive: begin and end values are included. </p>
+    <p>BETWEEN syntax</p>
+    <ul>
+        <li>SELECT column_name(s)</li>
+        <li>FROM table_name</li>
+        <li>WHERE column_name BETWEEN value1 AND value2;</li>
+    </ul>
+
+    <p>The following SQL statement selects all products with a price between 10 and 20:</p>
+    <ul>
+        <li>SELECT * FROM Products</li>
+        <li>WHERE Price BETWEEN 10 AND 20;</li>
+    </ul>
     
 
 
