--- a/index.html
+++ b/index.html
@@ -889,10 +889,13 @@
         <li>WHERE OrderDate BETWEEN '1996-07-01' AND '1996-07-31';</li>
     </ul>
 
+    <h1>SQL Aliases</h1>
+    <p>SQL aliases are used to give a table, or a column in a table, a temporary name.</p>
+    <p>Aliases are often used to make column names more readable.</p>
+    <p>An alias only exists for the duration of that query.</p>
+    <p>An alias is created with the AS keyword.</p>
+
     
-
-
-
 
 </body>
 </html>
