Aliases column and table syntax

--- a/index.html
+++ b/index.html
@@ -895,6 +895,20 @@
     <p>An alias only exists for the duration of that query.</p>
     <p>An alias is created with the AS keyword.</p>
 
+    <p>Alias Column Syntax</p>
+    <ul>
+        <li>SELECT column_name AS alias_name</li>
+        <li>FROM table_name;</li>
+    </ul>
+
+    <p>Alias Table Syntax</p>
+    <ul>
+        <li>SELECT column_name(s)</li>
+        <li>FROM table_name AS alias_name;</li>
+    </ul>
+
+    
+
     
 
 </body>
