--- a/index.html
+++ b/index.html
@@ -960,9 +960,8 @@
         <li>Two or more columns are combined together</li>
     </ol>
 
-    
+    <h1>SQL Joins</h1>
 
     
-
 </body>
 </html>
