SQL JOIN clause

--- a/index.html
+++ b/index.html
@@ -962,6 +962,16 @@
 
     <h1>SQL Joins</h1>
 
+    <p>A JOIN clause is used to combine rows from two or more tables, based on a related column between them.</p>
+    <p>we can create the following SQL statement (that contains an INNER JOIN), that selects records that have matching values in both tables:</p>
+    <ul>
+        <li>SELECT Orders.OrderID, Customers.CustomerName, Orders.OrderDate</li>
+        <li>FROM Orders</li>
+        <li>INNER JOIN Customers ON Orders.CustomerID=Customers.CustomerID;</li>
+    </ul>
+
+    
+
     
 </body>
 </html>
