--- a/index.html
+++ b/index.html
@@ -970,7 +970,14 @@
         <li>INNER JOIN Customers ON Orders.CustomerID=Customers.CustomerID;</li>
     </ul>
 
-    
+    <h3>Different Types of SQL JOINs</h3>
+    <p>Here are the different types of the JOINs in SQL:</p>
+    <ul>
+        <li>(INNER) JOIN: Returns records that have matching values in both tables</li>
+        <li>LEFT (OUTER) JOIN: Returns all records from the left table, and the matched records from the right table</li>
+        <li>RIGHT (OUTER) JOIN: Returns all records from the right table, and the matched records from the left table</li>
+        <li>FULL (OUTER) JOIN: Returns all records when there is a match in either left or right table</li>
+    </ul>
 
     
 </body>
