--- a/index.html
+++ b/index.html
@@ -1006,7 +1006,51 @@
         <li>INNER JOIN Shippers ON Orders.ShipperID = Shippers.ShipperID);</li>
     </ul>
 
+    <h1>SQL LEFT JOIN Keyword</h1>
+    <p>The LEFT JOIN keyword returns all records from the left table (table1), and the matching records from the right table (table2). The result is 0 records from the right side, if there is no match.</p>
+    <ul>
+        <li>SELECT column_name(s)</li>
+        <li>FROM table1</li>
+        <li>LEFT JOIN table2</li>
+        <li>ON table1.column_name = table2.column_name;</li>
+    </ul>
+
+    <p><strong>Note: In some databases LEFT JOIN is called LEFT OUTER JOIN.</strong></p>
+
+    <p>The following SQL statement will select all customers, and any orders they might have:</p>
+    <ul>
+        <li>SELECT Customers.CustomerName, Orders.OrderID</li>
+        <li>FROM Customers</li>
+        <li>LEFT JOIN Orders ON Customers.CustomerID = Orders.CustomerID</li>
+        <li>ORDER BY Customers.CustomerName;</li>
+    </ul>
+
+    <p><strong>Note: The LEFT JOIN keyword returns all records from the left table (Customers), even if there are no matches in the right table (Orders).</strong></p>
+
+    <h1>SQL RIGHT JOIN Keyword</h1>
+    <p>The RIGHT JOIN keyword returns all records from the right table (table2), and the matching records from the left table (table1). The result is 0 records from the left side, if there is no match.</p>
+
+    <ul>
+        <li>SELECT column_name(s)</li>
+        <li>FROM table1</li>
+        <li>RIGHT JOIN table2</li>
+        <li>ON table1.column_name = table2.column_name;</li>
+    </ul>
+
+    <p><strong>Note: In some databases RIGHT JOIN is called RIGHT OUTER JOIN.</strong></p>
+
+    <p>The following SQL statement will return all employees, and any orders they might have placed:</p>
+
+    <ul>
+        <li>SELECT Orders.OrderID, Employees.LastName, Employees.FirstName</li>
+        <li>FROM Orders</li>
+        <li>RIGHT JOIN Employees ON Orders.EmployeeID = Employees.EmployeeID</li>
+        <li>ORDER BY Orders.OrderID;</li>
+    </ul>
+
+    <p><strong>Note: The RIGHT JOIN keyword returns all records from the right table (Employees), even if there are no matches in the left table (Orders).</strong></p>
     
+
 
     
 </body>
